Closed Bug 2032987 Opened 4 months ago Closed 4 months ago

Input styling is broken

Categories

(Core :: Layout: Form Controls, defect)

defect

Tracking

()

RESOLVED FIXED
151 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr140 --- unaffected
firefox149 --- unaffected
firefox150 --- unaffected
firefox151 + fixed

People

(Reporter: muffinresearch, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Using Nightly 151.0a1 (2026-04-17) (aarch64)

STR:

  • Looking at inputs in sidebar panels e.g. the search there's no longer any border radius and the placeholder is mis-aligned.
  • Seems to be similar in settings.

What happens

  • Inputs are missing expected styling (no border radius and misaligned placeholders).

What should happen

  • Inputs should be styled as expected.

Mozregression points to Bug 2031757 - Rejigger text input / textarea rendering to make field-sizing easier. r=layout-reviewers,devtools-reviewers,fxview-reviewers,firefox-style-system-reviewers,ochameau,jsudiaman,dshin

Flags: needinfo?(emilio.alvarez96)
Flags: needinfo?(emilio.alvarez96) → needinfo?(emilio)

Set release status flags based on info from the regressing bug 2031757

Reduced:

data:text/html,<input type=text style="min-height: 32px; border-radius: 40px">

A bit weird that we didn't have tests for it?

Depends on: 2033086

Matches ComputedSizeWithBSizeFallback (and common sense).

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 151 Branch

The border radius will be dealt with in bug 2033086

Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/59347 for changes under testing/web-platform/tests

Upstream PR merged by moz-wptsync-bot

QA Whiteboard: [qa-triage-done-c152/b151]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: