Bug 2032987 - Apply min/max block size to field control's fixed size. r=layout-reviewers,dshin

Matches ComputedSizeWithBSizeFallback (and common sense).

Differential Revision: https://phabricator.services.mozilla.com/D295035